==> stxent/halm/platform/numicro/m48x/uart_base.c <==
#include <halm/platform/numicro/clocking.h>
#include <halm/platform/numicro/system.h>
#include <halm/platform/numicro/uart_base.h>
#include <assert.h>
#define uartDeinit deletedDestructorTrap

static enum Result uartInit(void *object, const void *configBase)
{
  const struct UartBaseConfig * const config = configBase;
  const size_t index = channelToIndex(config->channel);
  struct UartBase * const interface = object;

  assert(index != UINT8_MAX);
  if (!setInstance(config->channel, interface))
    return E_BUSY;

  /* Configure input and output pins */
  uartConfigPins(config);

  const struct UartBlockDescriptor * const entry = &uartBlockEntries[index];

  /* Enable clock to peripheral */
  sysClockEnable(entry->branch);
  /* Reset registers to default values */
  sysResetBlock(entry->reset);

  interface->channel = config->channel;
  interface->depth = UART_DEPTH_16;
  interface->handler = NULL;
  interface->irq = entry->irq;
  interface->reg = entry->reg;

  irqSetPriority(interface->irq, config->priority);
  irqEnable(interface->irq);

  return E_OK;
}

static void uartDeinit(void *object)
{
  const struct UartBase * const interface = object;
  const struct UartBlockDescriptor * const entry =
      &uartBlockEntries[channelToIndex(interface->channel)];

  irqDisable(interface->irq);
  sysClockDisable(entry->branch);
  instances[interface->channel] = NULL;
}
